tests/lean/simplifier_prove_failures.lean.expected.out
[simplifier.prove] goal: ?m_1 : Q
[simplifier.prove] prove_fn succeeded but did not return a proof
simplifier_prove_failures.lean:13:15: error: simp tactic failed to simplify
state:
⊢ R
simplifier_prove_failures.lean:13:15: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
[simplifier.prove] goal: ?m_1 : Q
[simplifier.prove] prove_fn failed to prove Q
simplifier_prove_failures.lean:14:15: error: simp tactic failed to simplify
state:
⊢ R
simplifier_prove_failures.lean:14:15: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
[simplifier.prove] goal: ?m_1 : Q
[simplifier.prove] prove_fn succeeded but left an unrecognized metavariable of type P in proof
simplifier_prove_failures.lean:15:15: error: simp tactic failed to simplify
state:
⊢ R
simplifier_prove_failures.lean:15:15: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
[simplifier.prove] goal: ?m_1 : Q
[simplifier.prove] success: HPQ HP : Q
